<resources>
    <string name="app_name" translatable="false">Songbook</string>
    <string name="app_name_nav" translatable="false">Songbook</string>
    <string name="adaptive_banner_ad_unit_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="adaptive_banner_ad_unit_id_prod" translatable="false">ca-app-pub-8517210898119735/5760576809</string>
    <string name="nav_categories_list">Artists</string>
    <string name="nav_search_song">Search / All Songs</string>
    <string name="nav_favourites_song">Liked Songs</string>
    <string name="nav_update_songs">Update</string>
    <string name="nav_custom_song">My Songs</string>
    <string name="nav_random_song">Random Song</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_exit">Exit</string>
    <string name="nav_about">About</string>
    <string name="nav_manual">Manual</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_screen_share">Bluetooth Sharing</string>
    <string name="nav_purchase">Shop</string>
    <string name="nav_logs" translatable="false">Logs</string>
    <string name="ui_about_content" formatted="false"><![CDATA[
        Application version: <b>%s</b><br>(%s)
        <br>Songs database version: %s
        <br>
        <br><b>AUTHOR</b>:
        <br>Ireneusz Szulc - <a href="mailto:igrek51.dev@gmail.com?Subject=Songbook">igrek51.dev@gmail.com</a>
        <br>
        <br><a href=\"https://igrek51.github.io/android-songbook\">Manual and User Guides</a>
        <br>
        <br><a href=\"https://github.com/igrek51/android-songbook\">Songbook Project on GitHub</a>
        <br>
        <br><a href=\"https://igrek51.github.io/android-songbook/CHANGELOG/\">Changelog - What\'s new in Songbook</a>
        <br>
        <br><a href=\"https://igrek51.github.io/android-songbook/develop/tech-stack\">Third Party Libraries</a>
    ]]></string>
    <string name="action_info_ok">OK</string>
    <string name="action_info_yes">Yes</string>
    <string name="action_secret">\?\?\?</string>
    <string name="action_check_secret">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="ui_db_is_uptodate">Songs database is up-to-date.</string>
    <string name="contact_label">Hi, please contact me (application author) if you have noticed some bugs or you have any ideas how to improve this application. I would be very grateful for your comments and contributing. If you wish to get a reply to your message, please include your email as well.</string>
    <string name="contact_message_hint">Your message…</string>
    <string name="contact_send">Send</string>
    <string name="contact_author_hint">Your name or email (optional)</string>
    <string name="transposed_by_semitones">Transposed by %s</string>
    <string name="transpose_0_semitones">semitones</string>
    <string name="transpose_1_semitones">semitone</string>
    <string name="transpose_234_semitones">semitones</string>
    <string name="transpose_5_semitones">semitones</string>
    <string name="action_transposition_reset">Reset</string>
    <string name="action_stop_autoscroll">Stop</string>
    <string name="action_start_now_autoscroll">Start now</string>
    <string name="autoscroll_starts_in">Autoscroll starts in %s s</string>
    <string name="autoscroll_started">Autoscrolling…</string>
    <string name="autoscroll_stopped">Autoscroll has been stopped.</string>
    <string name="autoscroll_forward_next_song_in">Forwarding to next song in %s s</string>
    <string name="start_autoscroll">Start autoscroll</string>
    <string name="stop_autoscroll">Stop autoscroll</string>
    <string name="end_of_song_autoscroll_stopped">End of song</string>
    <string name="song_category_others">Others</string>
    <string name="song_category_custom">My songs</string>
    <string name="song_search_edit_hint">Title, artist or lyrics</string>
    <string name="secret_key_invalid" formatted="false">Key is not valid: %s</string>
    <string name="unlock_new_songs_unlocked">Songs unlocked: %d</string>
    <string name="settings_scroll_initial_pause">Autoscroll initial delay: %s s</string>
    <string name="autoscroll_panel_speed">Autoscroll speed: %s line / s</string>
    <string name="settings_font_size_value">%s dp</string>
    <string name="settings_scroll_initial_pause_value">%s s</string>
    <string name="settings_autoscroll_speed_value">%s line / s</string>
    <string name="song_details_title">ℹ️ Song details</string>
    <string name="song_details" formatted="false">
        %s
        \n
        \nTitle: %s
        \nCategories: %s
        \nLocation: %s
        \nSong version: %s
        \nLast modification: %s
    </string>
    <string name="song_details_comment">Comment: %s</string>
    <string name="song_details_preferred_key">Preferred key: %s</string>
    <string name="song_detected_key">Detected key: %s</string>
    <string name="song_details_metre">Metre: %s</string>
    <string name="easter_egg_discovered">Congratulations!
        \nYou have found a Secret Cow Level :)</string>
    <string name="error_occurred_s">Error: %s</string>
    <string name="unlock_type_in_secret_key">Type in a secret key:</string>
    <string name="contact_message_field_empty">Message field can\'t be empty.</string>
    <string name="contact_sending">Sending…</string>
    <string name="contact_message_sent_successfully">Your message has been sent. Thanks :)</string>
    <string name="contact_error_sending">An error has occurred while sending your message.</string>
    <string name="none">None</string>
    <string name="scroll_at_the_beginning_already">Back to the beginning.</string>
    <string name="file_manager_not_found">Please install a File Manager.</string>
    <string name="select_file_to_import">Select a text file with UTF-8 encoding to import.</string>
    <string name="selected_file_is_too_big">Selected file is too big. Is it really a TEXT file?</string>
    <string name="editing_custom_song">Custom song</string>
    <string name="custom_song_editor">Song editor</string>
    <string name="edit_song_title_label">Song Title:</string>
    <string name="edit_song_title_hint">Title…</string>
    <string name="edit_song_content_label">Lyrics and [chords]:</string>
    <string name="import_song_content_hint">
        Song lyrics with [chords] in the same line
        \nCheck out help (?) for more details.
        \n…[C]Example [G#]text [C G# A7 F#maj7]…
        \n…[C]So, so you think you can [D]tell…
        \n…Smoke on the water [C G#]…
        \n…Never gonna [G]give you [A]up…
    </string>
    <string name="import_content_from_file">📂 Import from file\n  (TXT / PDF / Drive / Google Docs)</string>
    <string name="edit_song_save">💾 Save song</string>
    <string name="edit_song_remove">❌ Delete song</string>
    <string name="edit_song_category_name_label">Artist / category:</string>
    <string name="edit_song_category_name_hint">Artist or category name</string>
    <string name="contact_subject_hint">Subject</string>
    <string name="edit_song_open_in_editor">📑 Open in Song Editor</string>
    <string name="nav_playlists">Playlists</string>
    <string name="nav_latest">Latest</string>
    <string name="nav_history">History</string>
    <string name="nav_missing_song">Missing Song</string>
    <string name="missing_song_description">Here you can propose filling the gaps in a database, if you feel that some song is missing. It would be great if you\'d like to send your song with chords as well (using \"Publish\" action on custom songs). Write your song in a manner \"Artist - Title\".</string>
    <string name="missing_song_titles">Artist - Title</string>
    <string name="nav_admin_antechamber" translatable="false">Antechamber</string>
    <string name="nav_last_song">Last Song</string>
    <string name="nav_top_songs">Top Songs</string>
    <string name="nav_chord_diagram">Chord Diagrams</string>
    <string name="nav_song_cast">Song Cast</string>
    <string name="songcast_create_new_room">Create a room</string>
    <string name="songcast_enter_room_number_to_join">Enter 6-digit code to join the room:</string>
    <string name="songcast_room_code_hint">Room code</string>
    <string name="songcast_hint_my_name">Your name</string>
    <string name="songcast_join_room">Join the room</string>
    <string name="songcast_feature_hint"><![CDATA[
    <b>Song Cast</b> is a Songbook\'s protocol to display songs on many devices. Create a room so that your friends could join it. Once the presenter chooses a song, it will be broadcasted and displayed on all devices connected to a room.
]]></string>
    <string name="songcast_randomize_name">Randomize name</string>
    <string name="button_menu_description">Menu</string>
</resources>