<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/nav_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_top_songs"
            android:icon="@drawable/top"
            android:title="@string/nav_top_songs" />
        <item
            android:id="@+id/nav_songs_list"
            android:icon="@drawable/list"
            android:title="@string/nav_categories_list" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/nav_search_song" />
        <item
            android:id="@+id/nav_latest"
            android:icon="@drawable/newest"
            android:title="@string/nav_latest" />
    </group>
    <group
        android:id="@+id/nav_group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_custom_songs"
            android:icon="@drawable/edit"
            android:title="@string/nav_custom_song"
            app:actionLayout="@layout/component_nav_custom_song" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/playlist"
            android:title="@string/nav_playlists" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/star_filled"
            android:title="@string/nav_favourites_song" />
        <item
            android:id="@+id/nav_admin_antechamber"
            android:icon="@drawable/edit"
            android:title="@string/nav_admin_antechamber" />
    </group>
    <group
        android:id="@+id/nav_group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_last_song"
            android:icon="@drawable/note"
            android:title="@string/nav_last_song" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_random_song"
            android:icon="@drawable/random"
            android:title="@string/nav_random_song" />
        <item
            android:id="@+id/nav_update_db"
            android:icon="@drawable/sync"
            android:title="@string/nav_update_songs" />
        <item
            android:id="@+id/nav_chord_diagram"
            android:icon="@drawable/grid"
            android:title="@string/nav_chord_diagram" />
        <item
            android:id="@+id/nav_screen_share"
            android:icon="@drawable/bluetooth"
            android:title="@string/nav_screen_share" />
    </group>
    <group
        android:id="@+id/nav_group4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_purchase"
            android:icon="@drawable/shopping_cart"
            android:title="@string/nav_purchase" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/send"
            android:title="@string/nav_contact" />
        <item
            android:id="@+id/nav_missing_song"
            android:icon="@drawable/add"
            android:title="@string/nav_missing_song" />
        <item
            android:id="@+id/nav_manual"
            android:icon="@drawable/help"
            android:title="@string/nav_manual"
            app:actionLayout="@layout/component_nav_help" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/close"
            android:title="@string/nav_exit" />
    </group>
</menu>