<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:contentInsetEnd="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            >

            <ImageButton
                android:id="@+id/navMenuButton"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="start|center_vertical"
                android:adjustViewBounds="true"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/menu"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/editing_custom_song"
                android:textSize="18sp"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="bottom"
                android:text="@string/edit_song_title_label"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/songTitleEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="#07ffffff"
                android:gravity="center_vertical"
                android:hint="@string/edit_song_title_hint"
                android:inputType="text"
                android:padding="8dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="bottom"
                android:text="@string/edit_song_category_name_label"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/customCategoryNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="#07ffffff"
                android:gravity="center_vertical"
                android:hint="@string/edit_song_category_name_hint"
                android:inputType="text"
                android:padding="8dp"/>

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/editChordsLyricsInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="start|bottom"
                    android:gravity="bottom"
                    android:text="@string/edit_song_content_label"
                    android:textSize="18sp"
                    android:layout_toLeftOf="@+id/tooltipEditChordsLyricsInfo"
                    android:layout_toStartOf="@+id/tooltipEditChordsLyricsInfo"
                    android:layout_alignParentLeft="true"/>

                <ImageButton
                    android:id="@+id/tooltipEditChordsLyricsInfo"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end|center_vertical"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:background="?android:selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="4dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/help"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/songContentEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="#07ffffff"
                android:gravity="top"
                android:hint="@string/import_song_content_hint"
                android:minHeight="240dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:padding="8dp"
                android:inputType="none"
                android:text=""/>

            <Button
                android:id="@+id/openInChordsEditorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/edit_song_open_in_editor"/>

            <Button
                android:id="@+id/importFromFileButotn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/import_content_from_file"/>

            <Button
                android:id="@+id/saveSongButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/edit_song_save"/>

            <Button
                android:id="@+id/removeSongButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/edit_song_remove"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
